начал стилизацию каталога

--- a/catalog.html
+++ b/catalog.html
@@ -4,61 +4,82 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <header class="main-header">
     <div class="header-top-wrapper">
-      <div class="header-logo">
-        <a href="#"><img src="img/index-logo.png" width="220px" height="47px" alt="Логотип Техномарт"></a>
+      <div class="container container-flex">
+        <a class="logo-link" href="#" aria-label="Техномарт">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="109px" height="19px">
+            <path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M104.611,2.306 L104.611,18.055 L102.483,18.055 L102.483,2.306 L98.700,2.306 L98.700,0.556 L108.394,0.556 L108.394,2.306 L104.611,2.306 ZM96.208,11.568 C95.837,12.060 95.372,12.410 94.813,12.618 C94.253,12.827 93.587,12.931 92.815,12.931 C92.452,12.931 92.042,12.906 91.585,12.856 C91.128,12.806 90.750,12.747 90.450,12.681 L90.450,18.055 L88.322,18.055 L88.322,0.806 C88.921,0.623 89.524,0.494 90.131,0.419 C90.738,0.344 91.396,0.307 92.105,0.307 C93.051,0.307 93.855,0.411 94.517,0.619 C95.179,0.828 95.715,1.173 96.125,1.656 C96.535,2.140 96.834,2.781 97.023,3.581 C97.213,4.381 97.307,5.373 97.307,6.556 C97.307,7.773 97.216,8.789 97.035,9.606 C96.854,10.423 96.578,11.077 96.208,11.568 ZM95.002,4.306 C94.884,3.706 94.698,3.231 94.446,2.881 C94.194,2.531 93.875,2.286 93.489,2.144 C93.102,2.002 92.641,1.931 92.105,1.931 L90.450,1.931 L90.450,11.181 L92.105,11.181 C92.641,11.181 93.102,11.110 93.489,10.968 C93.875,10.827 94.194,10.581 94.446,10.231 C94.698,9.881 94.884,9.406 95.002,8.806 C95.120,8.206 95.179,7.456 95.179,6.556 C95.179,5.656 95.120,4.906 95.002,4.306 ZM83.021,13.556 L78.293,13.556 L77.229,18.055 L75.101,18.055 L79.120,0.556 L82.194,0.556 L86.213,18.055 L84.085,18.055 L83.021,13.556 ZM80.704,3.056 L80.610,3.056 L78.647,11.806 L82.667,11.806 L80.704,3.056 ZM70.315,5.056 L70.197,5.056 L66.769,15.805 L64.641,15.805 L61.212,5.056 L61.094,5.056 L60.385,18.055 L58.257,18.055 L59.202,0.556 L61.803,0.556 L65.657,12.556 L65.752,12.556 L69.606,0.556 L72.207,0.556 L73.153,18.055 L71.025,18.055 L70.315,5.056 ZM54.750,16.430 C54.309,17.114 53.777,17.597 53.154,17.880 C52.531,18.163 51.818,18.305 51.014,18.305 C50.211,18.305 49.497,18.163 48.875,17.880 C48.252,17.597 47.720,17.114 47.279,16.430 C46.837,15.747 46.502,14.827 46.274,13.668 C46.045,12.510 45.931,11.056 45.931,9.306 C45.931,7.556 46.045,6.102 46.274,4.944 C46.502,3.786 46.837,2.865 47.279,2.181 C47.720,1.498 48.252,1.015 48.875,0.731 C49.497,0.448 50.211,0.307 51.014,0.307 C51.818,0.307 52.531,0.448 53.154,0.731 C53.777,1.015 54.309,1.498 54.750,2.181 C55.191,2.865 55.526,3.786 55.755,4.944 C55.983,6.102 56.098,7.556 56.098,9.306 C56.098,11.056 55.983,12.510 55.755,13.668 C55.526,14.827 55.191,15.747 54.750,16.430 ZM53.722,5.606 C53.556,4.640 53.339,3.873 53.072,3.306 C52.803,2.740 52.488,2.348 52.126,2.131 C51.763,1.915 51.393,1.807 51.014,1.807 C50.636,1.807 50.266,1.915 49.903,2.131 C49.540,2.348 49.225,2.740 48.957,3.306 C48.689,3.873 48.473,4.640 48.307,5.606 C48.142,6.573 48.059,7.806 48.059,9.306 C48.059,10.806 48.142,12.039 48.307,13.006 C48.473,13.972 48.689,14.739 48.957,15.305 C49.225,15.872 49.540,16.264 49.903,16.480 C50.266,16.697 50.636,16.805 51.014,16.805 C51.393,16.805 51.763,16.697 52.126,16.480 C52.488,16.264 52.803,15.872 53.072,15.305 C53.339,14.739 53.556,13.972 53.722,13.006 C53.887,12.039 53.970,10.806 53.970,9.306 C53.970,7.806 53.887,6.573 53.722,5.606 ZM41.202,10.056 L36.237,10.056 L36.237,18.055 L34.109,18.055 L34.109,0.556 L36.237,0.556 L36.237,8.306 L41.202,8.306 L41.202,0.556 L43.330,0.556 L43.330,18.055 L41.202,18.055 L41.202,10.056 ZM29.917,18.055 L26.961,10.556 L24.006,18.055 L21.878,18.055 L25.425,9.056 L22.233,0.556 L24.361,0.556 L26.961,7.556 L29.562,0.556 L31.690,0.556 L28.498,9.056 L32.045,18.055 L29.917,18.055 ZM12.120,0.556 L20.159,0.556 L20.159,2.306 L14.248,2.306 L14.248,8.056 L19.450,8.056 L19.450,9.806 L14.248,9.806 L14.248,16.305 L20.159,16.305 L20.159,18.055 L12.120,18.055 L12.120,0.556 ZM6.332,18.055 L4.204,18.055 L4.204,2.306 L0.421,2.306 L0.421,0.556 L10.115,0.556 L10.115,2.306 L6.332,2.306 L6.332,18.055 Z" />
+          </svg>
+        </a>
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+          <p>
+            <label class="search-form-label visually-hidden" for="search">Поиск</label>
+            <button class="search-button" type="submit" name="button"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                <path
+                  d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+                </svg>
+            </button>
+            <input class="form" id="search" type="search" placeholder="Поиск">
+          </p>
+        </form>
+        <ul class="order-interface">
+          <li class="bookmarks"><a href="#">Закладки:0</a></li>
+          <li class="active-chart"><a href="#">Корзина:10</a></li>
+          <li class="order-button"><a href="#">Оформить заказ</a></li>
+        </ul>
       </div>
-      <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <label class="search-form-label" for="search">Поиск</label>
-          <input class="search-form" id="search" type="text" name="name" placeholder="Поиск">
-        </p>
-      </form>
-      <ul class="order-interface">
-        <li class="bookmarks"><a href="#">Закладки:0</a></li>
-        <li class="cart"><a href="#">Корзина:0</a></li>
-        <li class="order-button"><a href="#">Оформить заказ</a></li>
-      </ul>
     </div>
     <div class="header-middle-wrapper">
-      <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <address class="header-address">
-        <p class="phone">+7 (812) 555-05-55</p>
-        <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
-      </address>
-      <ul class="user-navigation">
-        <li class="login-link"><a href="login.html">Войти</a></li>
-        <li class="registration"><a href="registration.html">Регистрация</a></li>
-      </ul>
+      <div class="container container-flex">
+        <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <address class="header-address">
+          <p class="phone">+7 (812) 555-05-55</p>
+          <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
+        </address>
+        <ul class="catalog-user-navigation">
+          <li class="login-link cabinet"><a class="login" href="login.html">Равшан Джамшутович
+              <svg class="login-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+                <path d="M14.875 8.5L6 0v6H0v5h6v6z" />
+                <path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" /></svg>
+            </a>
+          </li>
+          <li class="my-orders"><a class="my-orders" href="#">Мои заказы</a></li>
+          <li class="cabinet-menu-item"><a href="#">Личный кабинет</a></li>
+        </ul>
+      </div>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a href="#">Главная</a></li>
+          <li><a href="about-us.html">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="price.html">Спецпредложения</a></li>
+          <li><a href="catalog.html">Доставка</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li><a href="#">Главная</a></li>
-        <li><a href="about us.html">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="news.html">Новости</a></li>
-        <li><a href="price.html">Спецпредложения</a></li>
-        <li><a href="catalog.html">Доставка</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-    </nav>
   </header>
 
   <main>
-    <ul class="breadcrumbs-list">
-      <li class="breadcrumbs-item"><a href="#">Каталог</a></li>
-      <li class="breadcrumbs-item"><a href="#">Инструмент</a></li>
-      <li class="breadcrumbs-item"><a href="#">Перфораторы</a></li>
-    </ul>
-    <div class="product-header">
-      <h2>Перфораторы</h2>
-    </div>
-    <section>
-      <div class="filter">
+  <ul class="breadcrumbs-list container">
+    <li class="catalog-link"><a href="#">Каталог</a></li>
+    <li class="catalog-instrument"><a href="#">Инструмент</a></li>
+    <li class="catalog-perforator"><a href="#">Перфораторы</a></li>
+  </ul>
+  <div class="catalog-label container">
+    <h2>Перфораторы</h2>
+  </div>
+  <section class="main-section container">
+    <div class="filter">
         <form class="prise-range-slider" action="https://echo.htmlacademy.ru" method="post">
           <div class="value">
             <input type="number" name="min-range" value="0">
@@ -108,6 +129,7 @@
           <li class="sort-parametres-item"><a href="#">Стрелка1</a></li>
           <li class="sort-parametres-item"><a href="#">Стрелка2</a></li>
         </ul>
+      </div>
         <ul class="product-list">
           <li class="product-list-item">
             <img src="img/perforator_1.jpg" alt="Перфоратор Bosch bfg 3000">
@@ -226,41 +248,72 @@
     <div class="about-drill">
       <h2>Пара слов о перфораторах</h2>
       <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+        <br>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
         В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </div>
   </main>
 
-  <footer>
-    <div class="footer-logo">
-      <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Техномарт"></a>
-      <ul class="foter-navigation-list">
-        <li class="footer-navigation-item"><a href="#">Компания</a></li>
-        <li class="footer-navigation-item"><a href="#">Новости</a></li>
-        <li class="footer-navigation-item"><a href="#">Каталог</a></li>
-        <li class="footer-navigation-item"><a href="#">Доставка</a></li>
-        <li class="footer-navigation-item"><a href="#">Контакты</a></li>
-      </ul>
+  <footer class="footer">
+    <div class="footer container">
+      <div class="footer-logo">
+        <div class="logo-container">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="128px" height="23px">
+            <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
+              d="M104.611,2.306 L104.611,18.055 L102.483,18.055 L102.483,2.306 L98.700,2.306 L98.700,0.556 L108.394,0.556 L108.394,2.306 L104.611,2.306 ZM96.208,11.568 C95.837,12.060 95.372,12.410 94.813,12.618 C94.253,12.827 93.587,12.931 92.815,12.931 C92.452,12.931 92.042,12.906 91.585,12.856 C91.128,12.806 90.750,12.747 90.450,12.681 L90.450,18.055 L88.322,18.055 L88.322,0.806 C88.921,0.623 89.524,0.494 90.131,0.419 C90.738,0.344 91.396,0.307 92.105,0.307 C93.051,0.307 93.855,0.411 94.517,0.619 C95.179,0.828 95.715,1.173 96.125,1.656 C96.535,2.140 96.834,2.781 97.023,3.581 C97.213,4.381 97.307,5.373 97.307,6.556 C97.307,7.773 97.216,8.789 97.035,9.606 C96.854,10.423 96.578,11.077 96.208,11.568 ZM95.002,4.306 C94.884,3.706 94.698,3.231 94.446,2.881 C94.194,2.531 93.875,2.286 93.489,2.144 C93.102,2.002 92.641,1.931 92.105,1.931 L90.450,1.931 L90.450,11.181 L92.105,11.181 C92.641,11.181 93.102,11.110 93.489,10.968 C93.875,10.827 94.194,10.581 94.446,10.231 C94.698,9.881 94.884,9.406 95.002,8.806 C95.120,8.206 95.179,7.456 95.179,6.556 C95.179,5.656 95.120,4.906 95.002,4.306 ZM83.021,13.556 L78.293,13.556 L77.229,18.055 L75.101,18.055 L79.120,0.556 L82.194,0.556 L86.213,18.055 L84.085,18.055 L83.021,13.556 ZM80.704,3.056 L80.610,3.056 L78.647,11.806 L82.667,11.806 L80.704,3.056 ZM70.315,5.056 L70.197,5.056 L66.769,15.805 L64.641,15.805 L61.212,5.056 L61.094,5.056 L60.385,18.055 L58.257,18.055 L59.202,0.556 L61.803,0.556 L65.657,12.556 L65.752,12.556 L69.606,0.556 L72.207,0.556 L73.153,18.055 L71.025,18.055 L70.315,5.056 ZM54.750,16.430 C54.309,17.114 53.777,17.597 53.154,17.880 C52.531,18.163 51.818,18.305 51.014,18.305 C50.211,18.305 49.497,18.163 48.875,17.880 C48.252,17.597 47.720,17.114 47.279,16.430 C46.837,15.747 46.502,14.827 46.274,13.668 C46.045,12.510 45.931,11.056 45.931,9.306 C45.931,7.556 46.045,6.102 46.274,4.944 C46.502,3.786 46.837,2.865 47.279,2.181 C47.720,1.498 48.252,1.015 48.875,0.731 C49.497,0.448 50.211,0.307 51.014,0.307 C51.818,0.307 52.531,0.448 53.154,0.731 C53.777,1.015 54.309,1.498 54.750,2.181 C55.191,2.865 55.526,3.786 55.755,4.944 C55.983,6.102 56.098,7.556 56.098,9.306 C56.098,11.056 55.983,12.510 55.755,13.668 C55.526,14.827 55.191,15.747 54.750,16.430 ZM53.722,5.606 C53.556,4.640 53.339,3.873 53.072,3.306 C52.803,2.740 52.488,2.348 52.126,2.131 C51.763,1.915 51.393,1.807 51.014,1.807 C50.636,1.807 50.266,1.915 49.903,2.131 C49.540,2.348 49.225,2.740 48.957,3.306 C48.689,3.873 48.473,4.640 48.307,5.606 C48.142,6.573 48.059,7.806 48.059,9.306 C48.059,10.806 48.142,12.039 48.307,13.006 C48.473,13.972 48.689,14.739 48.957,15.305 C49.225,15.872 49.540,16.264 49.903,16.480 C50.266,16.697 50.636,16.805 51.014,16.805 C51.393,16.805 51.763,16.697 52.126,16.480 C52.488,16.264 52.803,15.872 53.072,15.305 C53.339,14.739 53.556,13.972 53.722,13.006 C53.887,12.039 53.970,10.806 53.970,9.306 C53.970,7.806 53.887,6.573 53.722,5.606 ZM41.202,10.056 L36.237,10.056 L36.237,18.055 L34.109,18.055 L34.109,0.556 L36.237,0.556 L36.237,8.306 L41.202,8.306 L41.202,0.556 L43.330,0.556 L43.330,18.055 L41.202,18.055 L41.202,10.056 ZM29.917,18.055 L26.961,10.556 L24.006,18.055 L21.878,18.055 L25.425,9.056 L22.233,0.556 L24.361,0.556 L26.961,7.556 L29.562,0.556 L31.690,0.556 L28.498,9.056 L32.045,18.055 L29.917,18.055 ZM12.120,0.556 L20.159,0.556 L20.159,2.306 L14.248,2.306 L14.248,8.056 L19.450,8.056 L19.450,9.806 L14.248,9.806 L14.248,16.305 L20.159,16.305 L20.159,18.055 L12.120,18.055 L12.120,0.556 ZM6.332,18.055 L4.204,18.055 L4.204,2.306 L0.421,2.306 L0.421,0.556 L10.115,0.556 L10.115,2.306 L6.332,2.306 L6.332,18.055 Z" />
+          </svg>
+        </div>
+        <ul class="footer-navigation-list">
+          <li class="footer-navigation-item"><a href="#">Компания</a></li>
+          <li class="footer-navigation-item"><a href="#">Новости</a></li>
+          <li class="footer-navigation-item"><a href="#">Каталог</a></li>
+          <li class="footer-navigation-item"><a href="#">Доставка</a></li>
+          <li class="footer-navigation-item"><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer-contacts">
+        <address class="footer-address">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8<br>+7 (812) 555-05-55</p>
+        </address>
+        <ul class="footer-category-list">
+          <li class="footer-category-item"><a href="#">Материалы</a></li>
+          <li class="footer-category-item"><a href="#">Техника</a></li>
+          <li class="footer-category-item"><a href="#">Инструмент</a></li>
+          <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
     </div>
-    <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
-    <ul class="footer-category-list">
-      <li class="footer-category-item"><a href="#">Материалы</a></li>
-      <li class="footer-category-item"><a href="#">Техника</a></li>
-      <li class="footer-category-item"><a href="#">Инструмент</a></li>
-      <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
-    </ul>
     <div class="copyright">
-      <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
-      <ul class="social-list">
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фэйсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
-      </ul>
-      <div class="site-information">
-        <b>Обратная связь:</b>
-        <a class="feedback" href="mail@htmlacademy.ru">HTML Academy</a>
-        <b>Разработано:</b>
-        <a class="create-by" href="https://htmlacademy.ru">HTML Academy</a>
+      <div class="container container-flex">
+        <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
+        <ul class="social-list">
+          <li><a class="vk" href="#" area-label="Вконтакте">
+              <svg class="vk-logo" xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                <path fill="#FFF"
+                  d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" />
+              </svg>
+            </a>
+          </li>
+          <li><a class="fb" href="#" area-label="Фэйсбук">
+              <svg class="fb-logo" xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg>
+            </a>
+          </li>
+          <li><a class="inst" href="#" area-label="Инстаграм">
+              <svg class="inst-logo" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                <path fill="#FFF"
+                  d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="site-information">
+          <p>Обратная связь:<br>
+            <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p>Разработано -<br>
+            <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
+          </p>
+        </div>
       </div>
     </div>
   </footer>
