--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                   d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
                 </svg>
             </button>
-            <input class="form" id="search" type="search" placeholder="Поиск">
+            <input class="form" id="search" type="search" placeholder="Поиск:">
           </p>
         </form>
         <ul class="order-interface">
-          <li class="bookmarks"><a href="#">Закладки:0</a></li>
-          <li class="chart"><a href="#">Корзина:0</a></li>
+          <li class="bookmarks"><a href="#">Закладки: 0</a></li>
+          <li class="chart"><a href="#">Корзина: 0</a></li>
           <li class="order-button"><a href="#">Оформить заказ</a></li>
         </ul>
       </div>
     </div>
     <div class="header-middle-wrapper">
       <div class="container container-flex">
-        <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <h1 class="site-label">Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</h1>
         <address class="header-address">
           <p class="phone">+7 (812) 555-05-55</p>
           <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
@@ -87,8 +87,8 @@
       <div class="category-list">
         <div class="catalog-item-galery">
           <img class="banner" src="img/drill-baner.jpg" alt="Дрели соседям на радость">
-          <input id="img_1" class="slide_img" checked="checked" name="slide_img" type="radio">
-          <input id="img_2" class="slide_img" name="slide_img" type="radio">
+          <button class="galery-button-forward" type="button" name="button"></button>
+          <button class="galery-button-backward" type="button" name="button"></button>
           <a href="#">Открыть каталог</a>
         </div>
         <div class="category-list-end">
@@ -183,7 +183,7 @@
         </div>
         <div class="servises-description">
           <ul class="servises-list">
-            <li class="servises-delivery"><a href="#">Доставка</a></li>
+            <li class="servises-delivery-active"><a href="#">Доставка</a></li>
             <li class="servises-warranty"><a href="#">Гарантия</a></li>
             <li class="servises-credit"><a href="#">Кредит</a></li>
           </ul>
