--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&display=swap&subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -22,47 +22,57 @@
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <p>
             <label class="search-form-label visually-hidden" for="search">Поиск</label>
-            <button class="search-button" type="submit" name="button"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+            <input class="form" id="search" type="search" placeholder="Поиск:">
+            <button class="search-button" type="submit" name="button">
+              <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
                 <path
                   d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
                 </svg>
             </button>
-            <input class="form" id="search" type="search" placeholder="Поиск:">
           </p>
         </form>
         <ul class="order-interface">
-          <li class="bookmarks"><a href="#">Закладки: 0</a></li>
-          <li class="chart"><a href="#">Корзина: 0</a></li>
-          <li class="order-button"><a href="#">Оформить заказ</a></li>
+          <li class="bookmarks">
+            <a class="bookmarks-link" href="#">Закладки: 0</a>
+          </li>
+          <li class="chart">
+            <a class="chart-link" href="#">Корзина: 0</a>
+          </li>
+          <li class="order-button">
+            <a class="order-button-link" href="#">Оформить заказ</a>
+          </li>
         </ul>
       </div>
     </div>
     <div class="header-middle-wrapper">
       <div class="container container-flex">
-        <h1 class="site-label">Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</h1>
+        <h1 class="site-label">Интернет-магазин строительных материалов <br>и инструментов для ремонта</h1>
         <address class="header-address">
           <p class="phone">+7 (812) 555-05-55</p>
-          <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
+          <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </address>
         <ul class="user-navigation">
-          <li class="login-link"><a class="login" href="login.html">Войти
+          <li class="login">
+            <a class="login-link" href="login.html">Войти
               <svg class="login-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
                 <path d="M14.875 8.5L6 0v6H0v5h6v6z" />
                 <path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" /></svg>
             </a>
           </li>
-          <li class="registration"><a href="registration.html">Регистрация</a></li>
+          <li class="registration">
+            <a class="registration-link" href="registration.html">Регистрация</a>
+          </li>
         </ul>
       </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
-          <li><a href="about-us.html">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="news.html">Новости</a></li>
-          <li><a href="price.html">Спецпредложения</a></li>
-          <li><a href="catalog.html">Доставка</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+      <nav class="main-navigation container-flex">
+        <ul class="site-navigation-list container-flex">
+          <li class="site-navigation-first-item"><a href="#">Главная</a></li>
+          <li class="site-navigation-item"><a href="about-us.html">Компания</a></li>
+          <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="site-navigation-item"><a href="news.html">Новости</a></li>
+          <li class="site-navigation-item"><a href="price.html">Спецпредложения</a></li>
+          <li class="site-navigation-item"><a href="catalog.html">Доставка</a></li>
+          <li class="site-navigation-last-item"><a href="contacts.html">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -73,7 +83,7 @@
       <div class="category-list-begin">
         <div class="category-item-materials">
           <p>Материалы</p>
-          <a href="#">Налюбой вкус</a>
+          <a href="#">На любой вкус</a>
         </div>
         <div class="category-item-instruments">
           <p>Инструмент</p>
@@ -86,10 +96,22 @@
       </div>
       <div class="category-list">
         <div class="catalog-item-galery">
-          <img class="banner" src="img/drill-baner.jpg" alt="Дрели соседям на радость">
-          <button class="galery-button-forward" type="button" name="button"></button>
-          <button class="galery-button-backward" type="button" name="button"></button>
-          <a href="#">Открыть каталог</a>
+          <div class="first-slide">
+            <img class="banner" src="img/drill-baner.jpg" alt="Дрели соседям на радость">
+            <a href="#">Открыть каталог</a>
+          </div>
+          <div class="second-slide">
+            <img class="banner" src="img/drill-baner.jpg" alt="Дрели соседям на радость">
+            <a href="#">Открыть каталог</a>
+          </div>
+          <div class="slider-control">
+            <button class="galery-button-forward" type="button" name="button"></button>
+            <button class="galery-button-backward" type="button" name="button"></button>
+          </div>
+          <div class="slider-indicator">
+            <button class="slider-indicator-none" type="button" name="button"></button>
+            <button class="slider-indicator-active" type="button" name="button"></button>
+          </div>
         </div>
         <div class="category-list-end">
           <div class="category-item-discount">
@@ -115,11 +137,11 @@
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
           <img class="image" src="img/perforator_1.jpg" alt="Перфоратор Bosch bfg 2000">
-          <a href="#">
-            <h3 class="title">Перфоратор Bosch <br> BFG 9000</h3>
+          <a class="good-link" href="#">
+            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 9000</h3>
           </a>
-          <p class="discount">32 500 Р.</p>
-          <p class="price"><a href="#">22500 Р.</a></p>
+          <p class="discount">32500 Р.</p>
+          <p class="price"><a class="price-link" href="#">25500 Р.</a></p>
         </li>
         <li class="catalog-item">
           <div class="actions">
@@ -127,11 +149,11 @@
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
           <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
-          <a href="#">
-            <h3 class="title">Перфоратор Bosch <br> BFG 3000</h3>
+          <a class="good-link" href="#">
+            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 3000</h3>
           </a>
-          <p class="discount">22 500 Р.</p>
-          <p class="price"><a href="#">15500 Р.</a></p>
+          <p class="discount">22500 Р.</p>
+          <p class="price"><a class="price-link" href="#">15500 Р.</a></p>
         </li>
         <li class="catalog-item">
           <div class="actions">
@@ -139,23 +161,23 @@
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
           <img class="image" src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 2000">
-          <a href="#">
-            <h3 class="title">Перфоратор Bosch <br> BFG 6000</h3>
+          <a class="good-link" href="#">
+            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 6000</h3>
           </a>
-          <p class="discount">30 500 Р.</p>
-          <p class="price"><a href="#">22500 Р.</a></p>
+          <p class="discount">30500 Р.</p>
+          <p class="price"><a class="price-link" href="#">22500 Р.</a></p>
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item new">
           <div class="actions">
             <p><a class="buy" href="#">Купить</a></p>
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
           <img class="image" src="img/perforator_4.jpg" alt="Перфоратор Bosch bfg 2000">
-          <a href="#">
-            <h3 class="title">Перфоратор Bosch <br> BFG 2000</h3>
+          <a class="good-link" href="#">
+            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 2000</h3>
           </a>
           <p class="discount"></p>
-          <p class="price"><a href="#">12500 Р.</a></p>
+          <p class="price"><a class="price-link" href="#">12500 Р.</a></p>
         </li>
       </ul>
     </section>
@@ -189,6 +211,14 @@
           </ul>
           <div class="delivery">
             <h4>Доставка</h4>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
+          </div>
+          <div class="warranty">
+            <h4>Гарантия</h4>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! <br> Ведь мы неплохо заработаем, <br> поднимая его на ваш этаж!</p>
+          </div>
+          <div class="credit">
+            <h4>Кредит</h4>
             <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! <br> Ведь мы неплохо заработаем, <br> поднимая его на ваш этаж!</p>
           </div>
         </div>
@@ -209,7 +239,7 @@
         </div>
         <div class="contacts">
           <h4 class="contacts-label">Контакты</h4>
-          <p class="paragraph-three">Вы можете забрать товар сами, заехав в наш офис:</p>
+          <p class="paragraph-three">Вы можете забрать товар сами, <br>заехав в наш офис:</p>
           <img class="map" src="img/map.png" width: "300px" height: "158px" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           <a class="write-us-link" href="#">Заблудились? Напишите нам!</a>
         </div>
