Закончил стилизацию личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -78,7 +78,7 @@
       </div>
       <nav class="main-navigation container-flex">
         <ul class="site-navigation-list container-flex">
-          <li class="site-navigation-first-item"><a href="#">Главная</a></li>
+          <li class="site-navigation-first-item"><a href="index.html">Главная</a></li>
           <li class="site-navigation-item"><a href="about-us.html">Компания</a></li>
           <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
           <li class="site-navigation-item"><a href="news.html">Новости</a></li>
